[gd_scene load_steps=2 format=3 uid="uid://duryk14homy1s"]

[ext_resource type="Script" uid="uid://djkimjcpy0il5" path="res://main.gd" id="1_0fbet"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 252.0
offset_top = 97.0
offset_right = 878.0
offset_bottom = 553.0
script = ExtResource("1_0fbet")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -250.0
offset_top = -94.0
offset_right = 899.0
offset_bottom = 524.0

[node name="AstronautText" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
bbcode_enabled = true

[node name="InputLine" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="DebugLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[connection signal="text_submitted" from="VBoxContainer/InputLine" to="." method="_on_input_line_text_submitted"]
